# EADAI

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md
.trellis/: .template-hashes.json  workflow.md
src/: ai_adapter.rs  ai_contract.rs  analysis.rs  app.rs  bmi088.rs  bus.rs  cli.rs  error.rs  fake_session.rs  key_value_parser.rs  lib.rs  main.rs  mcp_server.rs  measurement_parser.rs  message.rs  parser.rs  runtime_host.rs  serial.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  fake_session.rs  logic_analyzer.rs  main.rs  mcp.rs  model.rs  state.rs
src-tauri/src/model/: bus.rs  line.rs  logic_analyzer.rs  mod.rs  protocol.rs  session.rs
src/analysis/: engine.rs  imu.rs  model.rs
src/app/: bmi088_publish.rs  command.rs  helpers.rs  mod.rs
src/bmi088/: constants.rs  decoder.rs  encoder.rs  mod.rs  models.rs  session.rs
src/bmi088_diag/: mod.rs  protocol.rs
src/protocols/: capability.rs  crazyradio.rs  crtp.rs  mavlink.rs  mod.rs  serial_transport.rs  transport.rs
tests/: ai_adapter.rs  analysis_engine.rs  bmi088_diag.rs  bmi088_protocol.rs  bmi088_tauri_commands.rs  crtp_protocol.rs  key_value_parser.rs  line_framer.rs  logic_analyzer.rs  mavlink_protocol.rs  mcp_server.rs  measurement_parser.rs  message_bus.rs  message_line_events.rs  reconnect_controller.rs  runtime_host.rs  self_describing_crtp_integration.rs  self_describing_protocol.rs  self_describing_streaming_verdict.rs  self_describing_transport_send.rs  serial_ports.rs  serial_write.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+214 files in other folders)
