[package]
name = "EADAI"
version = "0.1.0"
edition = "2024"

[lib]
name = "eadai"
path = "src/lib.rs"

[[bin]]
name = "eadai"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.12", features = ["transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.8.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
