[package]
name = "eadai-desktop"
version = "0.1.0"
edition = "2024"
default-run = "eadai-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
eadai = { package = "EADAI", path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
