[package]
name = "eadai-desktop"
version = "0.1.0"
edition = "2024"
default-run = "eadai-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
eadai = { package = "EADAI", path = ".." }
rmcp = { version = "0.12", features = ["transport-streamable-http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
